fix(Grid): Fix safari squashing (again)
cap-grid > * MUST have height auto in safari but apparently the media queries were not sufficient
specificity. Adding a div specificer fixes it. Not ideal but it works, as long as grid stays a div
(which is should)

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -97,7 +97,8 @@ body {
 // safari 11+ detection.
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (stroke-color: transparent) {
-    .cap-grid > * {
+    // apparently, this was being beat for specificity despite above media queries
+    div.cap-grid > * {
       height: auto;
     }
   }
